--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "@strapi/provider-upload-cloudinary": "^5.31.3",
     "@strapi/strapi": "5.31.2",
     "better-sqlite3": "12.4.1",
+    "node-fetch": "^3.3.2",
     "pg": "^8.16.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
