--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,13 @@
     "@gsap/react": "^2.1.2",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.0",
+    "@tailwindcss/typography": "^0.5.19",
+    "@tiptap/extension-image": "^3.13.0",
+    "@tiptap/extension-link": "^3.13.0",
+    "@tiptap/extension-placeholder": "^3.13.0",
+    "@tiptap/pm": "^3.13.0",
+    "@tiptap/react": "^3.13.0",
+    "@tiptap/starter-kit": "^3.13.0",
     "@types/three": "^0.181.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
@@ -22,6 +29,7 @@
     "qs": "^6.14.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
     "three": "^0.181.2"
   },
