fix url database

--- a/backend/.env.production.example
+++ b/backend/.env.production.example
@@ -13,11 +13,13 @@ TRANSFER_TOKEN_SALT=UgaVdD7J5YZqhIknGUkdfA==
 ENCRYPTION_KEY=//DkBePHbfO0hWFYza+9rQ==
 JWT_SECRET=8fuUTvOyOrM7qaCrqwgr5A==
 
-# Database - SUPABASE POSTGRESQL
+# Database - SUPABASE POSTGRESQL (Transaction Pooling Mode)
 DATABASE_CLIENT=postgres
-DATABASE_URL=postgresql://postgres:[YOUR-PASSWORD]@db.xxxxx.supabase.co:5432/postgres
+DATABASE_URL=postgresql://postgres.xxxxx:[YOUR-PASSWORD]@aws-0-ap-southeast-1.pooler.supabase.com:6543/postgres
 DATABASE_SSL=true
 DATABASE_SSL_REJECT_UNAUTHORIZED=false
+DATABASE_POOL_MIN=2
+DATABASE_POOL_MAX=5
 
 # Cloudinary (GIỮ NGUYÊN)
 CLOUDINARY_NAME=divcyhzdk
