--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.25",
     "gsap": "^3.13.0",
+    "isomorphic-dompurify": "^2.35.0",
     "lucide-react": "^0.555.0",
     "next": "^16.0.7",
     "qrcode.react": "^4.2.0",
