update test momo

--- a/backend/.env.production
+++ b/backend/.env.production
@@ -46,12 +46,12 @@ VNPAY_URL=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
 # =====================================================
 # MOMO PAYMENT (Works on both local & production!)
 # =====================================================
-MOMO_PARTNER_CODE=YOUR_MOMO_PARTNER_CODE
-MOMO_ACCESS_KEY=YOUR_MOMO_ACCESS_KEY
-MOMO_SECRET_KEY=YOUR_MOMO_SECRET_KEY
+MOMO_PARTNER_CODE=MOMO
+MOMO_ACCESS_KEY=F8BBA842ECF85
+MOMO_SECRET_KEY=K951B6PE1waDMi640xX08PD3vg6EkVlz
 
-# For Testing: Use test endpoint
-# For Production: Use production endpoint
+# For Testing: Use test endpoint (sandbox credentials above work with this)
+# For Production: Use production endpoint (need real merchant account)
 MOMO_ENDPOINT=https://test-payment.momo.vn
 # MOMO_ENDPOINT=https://payment.momo.vn
 
