--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "upgrade:dry": "npx @strapi/upgrade latest --dry"
   },
   "dependencies": {
+    "@payos/node": "^2.0.4",
     "@strapi/plugin-cloud": "5.31.2",
     "@strapi/plugin-users-permissions": "5.31.2",
     "@strapi/provider-upload-cloudinary": "^5.31.3",
