--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@payos/node": "^2.0.4",
     "@strapi/plugin-cloud": "5.31.2",
     "@strapi/plugin-users-permissions": "5.31.2",
+    "@strapi/provider-email-nodemailer": "^5.33.3",
     "@strapi/provider-upload-cloudinary": "^5.31.3",
     "@strapi/strapi": "5.31.2",
     "better-sqlite3": "12.4.1",
