--- a/backend/.env.payment.template
+++ b/backend/.env.payment.template
@@ -75,6 +75,22 @@ MOMO_IPN_URL=http://localhost:1337/api/payment/momo/ipn
 
 
 # ============================================
+# PAYPAL (Sandbox/Live)
+# ============================================
+# Đăng ký tại: https://developer.paypal.com/dashboard/
+# Create App & Credentials -> Sandbox
+
+# Client ID
+PAYPAL_CLIENT_ID=your-sandbox-client-id
+
+# Client Secret
+PAYPAL_CLIENT_SECRET=your-sandbox-client-secret
+
+# Mode: 'sandbox' or 'live'
+PAYPAL_MODE=sandbox
+
+
+# ============================================
 # FRONTEND URL
 # ============================================
 FRONTEND_URL=http://localhost:3000
@@ -98,28 +114,7 @@ FRONTEND_URL=http://localhost:3000
 #    - Truy cập: https://payos.vn/
 #    - Đăng ký với SĐT
 #    - Kết nối tài khoản ngân hàng
-#    - Lấy API keys từ Settings
-#    - Có webhook tự động
 #
-# 3. MoMo (Optional - For MoMo wallet)
-#    - Truy cập: https://developers.momo.vn/
-#    - Đăng ký partner
-#    - Chọn Test Environment
-#    - Lấy credentials
-#
-# ============================================
-
-# Response Codes Reference (VNPay)
-# 00: Success
-# 07: Trừ tiền thành công. Giao dịch bị nghi ngờ (liên quan tới lừa đảo, giao dịch bất thường).
-# 09: Giao dịch không thành công do: Thẻ/Tài khoản của khách hàng chưa đăng ký dịch vụ InternetBanking tại ngân hàng.
-# 10: Giao dịch không thành công do: Khách hàng xác thực thông tin thẻ/tài khoản không đúng quá 3 lần
-# 11: Giao dịch không thành công do: Đã hết hạn chờ thanh toán. Xin quý khách vui lòng thực hiện lại giao dịch.
-# 12: Giao dịch không thành công do: Thẻ/Tài khoản của khách hàng bị khóa.
-# 13: Giao dịch không thành công do Quý khách nhập sai mật khẩu xác thực giao dịch (OTP).
-# 24: Giao dịch không thành công do: Khách hàng hủy giao dịch
-# 51: Giao dịch không thành công do: Tài khoản của quý khách không đủ số dư để thực hiện giao dịch.
-# 65: Giao dịch không thành công do: Tài khoản của Quý khách đã vượt quá hạn mức giao dịch trong ngày.
-# 75: Ngân hàng thanh toán đang bảo trì.
-# 79: Giao dịch không thành công do: KH nhập sai mật khẩu thanh toán quá số lần quy định.
-# 99: Các lỗi khác (lỗi còn lại, không có trong danh sách mã lỗi đã liệt kê)
+# 3. PayPal (International)
+#    - Truy cập: https://developer.paypal.com/
+#    - Lấy Client ID & Secret từ Sandbox App
